# 36C-Code

hw0-submission/: CMakeLists.txt  Dockerfile  README.md  generate_submission.sh  main.cpp
hw0-submission/src/: CMakeLists.txt  insertion_sort.cpp  utils.hpp
hw2-submission/src/: linked_list.cpp  queue.cpp  stack.cpp
hw3-submission/: README.md
hw3-submission/src/: bst.cpp  tree.cpp
